--- a/extract_info_from_pdfs.ipynb
+++ b/extract_info_from_pdfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "314\n",
-      "https://openknowledge.worldbank.org/bitstream/handle/10986/29967/128037-BRI-PUBLIC-TanzaniaBizTrainigsBriefv.pdf?sequence=5&isAllowed=y\n",
-      "Designing Targeted Business Trainings for Impact : Insights from a Women Entrepreneurs' Program in Tanzania\n"
+      "354\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30500/130298.pdf?sequence=2&isAllowed=y\n",
+      "Haiti : Can Preconditions for RBF be Established in Fragile States?\n",
+      "355\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30390/129736-BRI-PUBLIC-VC-LW93-OKR.pdf?sequence=1&isAllowed=y\n",
+      "Making a Difference in People's Lives : Rural Electrification in the Lao People's Democratic Republic\n",
+      "356\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29480/124280-BRI-PUBLIC-KN05.pdf?sequence=1&isAllowed=y\n",
+      "Creating an Enabling Environment\n",
+      "357\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30505/129860-BRI-PUBLIC-Land-Governance-Policy-Brief-5.pdf?sequence=1&isAllowed=y\n",
+      "Using Satellite Imagery to Revolutionize the Creation of Tax Maps\n",
+      "358\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29508/124341-repl-WB-Knowledge-Aquaculture.pdf?sequence=1&isAllowed=y\n",
+      "Aquaculture\n",
+      "359\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30489/130019-BRI-TransportICT-Connections-Note2-2018.pdf?sequence=1&isAllowed=y\n",
+      "How China's Transport Sector Can Contribute to Carbon Reduction\n",
+      "360\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29474/124295-BRI-PUBLIC-KN20.pdf?sequence=1&isAllowed=y\n",
+      "Empowering Women\n",
+      "361\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29419/QN-164.pdf?sequence=5&isAllowed=y\n",
+      "Climate Change in MENA : Challenges and Opportunities for the World’s Most Water Stressed Region\n",
+      "362\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29478/124288-BRI-PUBLIC-KN13.pdf?sequence=1&isAllowed=y\n",
+      "Water Access and Management\n",
+      "363\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30659/131476-BRI-PUBLIC-add-series-VC-SocialAccountabilityIndonesia.pdf?sequence=1&isAllowed=y\n",
+      "Social Accountability in Health in Indonesia : Lessons from Programs\n",
+      "364\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/31849/Improving-the-Accessibility-of-Frontline-Services-for-Equitable-Care-Amidst-Rapid-Growth-and-Urbanization.pdf?sequence=1&isAllowed=y\n",
+      "Improving the Accessibility of Frontline Services : For Equitable Care Amidst Rapid Growth and Urbanization\n",
+      "365\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/31853/Optimizing-Staffing-Models-and-Team-Structure-for-Dignified-Person-Centered-Care-Amidst-Demographic-Change.pdf?sequence=1&isAllowed=y\n",
+      "Optimizing Staffing Models and Team Structure : For Dignified, Person-Centered Care Amidst Demographic Change\n",
+      "ERROR - trying again\n",
+      "366\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/31852/Optimizing-Staffing-Models-and-Team-Structure-for-Equitable-Care-Amidst-Rapid-Growth-and-Urbanization.pdf?sequence=1&isAllowed=y\n",
+      "Optimizing Staffing Models and Team Structure : For Equitable Care Amidst Rapid Growth and Urbanization\n",
+      "367\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29690/125368-BRI-PUBLIC-ADD-SERIES-MARK-VIRTUAL-COLL-QN-168-Conflict-and-Climate-Change-1.pdf?sequence=1&isAllowed=y\n",
+      "Strengthening Conflict Sensitive Approaches to Climate Change in MENA\n",
+      "368\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29530/124394-WP-P144969-PUBLIC-BiHAccesstoFinanceKnowledgeBrief.pdf?sequence=1&isAllowed=y\n",
+      "Access to Finance for Female-led Micro, Small and Medium-sized Enterprises in Bosnia and Herzegovina\n",
+      "369\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30387/129661-BRI-PUBLIC-28-8-2018-14-55-33-HNPFCVKnowledgeNotesMentalHealthv.pdf?sequence=1&isAllowed=y\n",
+      "Mental Health and Psychosocial Support in Fragile, Conflict, and Violence Situations : Five Key Questions to be Answered\n",
+      "370\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29594/124553-BRI-PUBLIC-ADD-SERIES-WBJobsNoteweb.pdf?sequence=1&isAllowed=y\n",
+      "Labor Market Observatories : Critical Success Factors\n",
+      "371\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/31553/Research-Digest-Winter-2018.pdf?sequence=1&isAllowed=y\n",
+      "World Bank Research Digest, Vol. 12(2)\n",
+      "372\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/31554/Research-Digest-Spring-2018.pdf?sequence=1&isAllowed=y\n",
+      "World Bank Research Digest, Vol. 12(3)\n",
+      "373\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29851/126181-BRI-PUBLIC-Draft-QN-169-Final.pdf?sequence=1&isAllowed=y\n",
+      "Disruptive Technology : New Growth Engine for MENA?\n",
+      "374\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30561/130561-BRI-PUBLIC-VC-ADD-SERIES-KnowledgeBriefLessonsfromProgramsNewFormatOct.pdf?sequence=1&isAllowed=y\n",
+      "The Role of the Private Sector in Reproductive Health Services in Bangladesh\n",
+      "375\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30205/128955-WP-AFR-CG-and-Code-Development-in-SSA-PUBLIC.pdf?sequence=1&isAllowed=y\n",
+      "What We Learned about Corporate Governance and Code Development in Sub-Saharan Africa\n",
+      "376\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30377/125904-BRI-EMCompass-Note-51-BlendedFinance-April-13-PUBLIC.pdf?sequence=1&isAllowed=y\n",
+      "Blended Finance : A Stepping Stone to Creating Markets\n",
+      "377\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30497/130129-BRI-fcv-PUBLIC-ADD-SERIES-HNP-Knowledge-Brief-TAG-TO-VC-Knowledge-note.pdf?sequence=1&isAllowed=y\n",
+      "Health Service Delivery in Fragile, Conflict, and Violence Situations\n",
+      "378\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/31057/Women-in-Business-Leadership-Public-Sector-Opinion-42-PUBLIC.pdf?sequence=1&isAllowed=y\n",
+      "Women in Business Leadership Boost ESG Performance : Existing Body of Evidence Makes Compelling Case\n",
+      "379\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30381/128849-BRI-PE-EMCompass-Note-55-WorksForTaxes-PUBLIC.pdf?sequence=1&isAllowed=y\n",
+      "Peru’s Works for Taxes Scheme : An Innovative Solution to Accelerate Private Provision of Infrastructure Investment\n",
+      "380\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29228/122842-BRI-PUBLIC-LW83-LJ-fin-OKR.pdf?sequence=1&isAllowed=y\n",
+      "Shedding Light on Electricity Utilities in the Middle East and North Africa : Insights from a Performance Diagnostic\n",
+      "381\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/28622/120678-BRI-PUBLIC-24-10-2017-14-33-7-LWLJFinOKR.pdf?sequence=1&isAllowed=y\n",
+      "Data as an Enabler in the Off-Grid Sector : Focus on Tanzania\n",
+      "382\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/27657/117757-BRI-PUBLIC-MangroveProtectionServices.txt?sequence=2&isAllowed=y\n",
+      "Valuing the Protection Services of Mangroves in the Philippines\n",
+      "ERROR - trying again\n",
+      "383\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29868/126923-WP-5-6-2018-18-24-37-W.pdf?sequence=1&isAllowed=y\n",
+      "A Brief Summary of Global WASH Interventions\n"
      ]
     }
    ],
@@ -92,7 +181,7 @@
     "\n",
     "coll_knowledge_notes = reports_coll.find({'collection':'Knowledge Notes'})\n",
     "\n",
-    "start_index = 314\n",
+    "start_index = 354\n",
     "for element in coll_knowledge_notes[start_index:]:\n",
     "    print(start_index)\n",
     "    \n",
@@ -104,25 +193,26 @@
     "    \n",
     "    print(url)\n",
     "    print(title)\n",
-    "    if 'full_text' not in element.keys():\n",
-    "        try:\n",
-    "            pdf_path = download_pdf(url,storage_dir,title)\n",
-    "            pdf_to_images(pdf_path,storage_dir,object_id,reports_coll)\n",
-    "            master_text = images_to_text(storage_dir)\n",
-    "            upload_text_to_mongodb(reports_coll,object_id,master_text)\n",
-    "            delete_temp_content(storage_dir)\n",
-    "            time.sleep(60)\n",
-    "        except (ValueError,PDFPageCountError, PDFSyntaxError):\n",
-    "            print('syntaxerror')\n",
-    "            time.sleep(300)\n",
+    "    if url:\n",
+    "        if 'full_text' not in element.keys():\n",
     "            try:\n",
     "                pdf_path = download_pdf(url,storage_dir,title)\n",
     "                pdf_to_images(pdf_path,storage_dir,object_id,reports_coll)\n",
     "                master_text = images_to_text(storage_dir)\n",
     "                upload_text_to_mongodb(reports_coll,object_id,master_text)\n",
     "                delete_temp_content(storage_dir)\n",
+    "                time.sleep(60)\n",
     "            except:\n",
-    "                pass\n"
+    "                print('ERROR - trying again')\n",
+    "                time.sleep(300)\n",
+    "                try:\n",
+    "                    pdf_path = download_pdf(url,storage_dir,title)\n",
+    "                    pdf_to_images(pdf_path,storage_dir,object_id,reports_coll)\n",
+    "                    master_text = images_to_text(storage_dir)\n",
+    "                    upload_text_to_mongodb(reports_coll,object_id,master_text)\n",
+    "                    delete_temp_content(storage_dir)\n",
+    "                except:\n",
+    "                    pass\n"
    ]
   },
   {
@@ -183,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
