--- a/extract_info_from_pdfs.ipynb
+++ b/extract_info_from_pdfs.ipynb
@@ -170,7 +170,13 @@
       "ERROR - trying again\n",
       "383\n",
       "https://openknowledge.worldbank.org/bitstream/handle/10986/29868/126923-WP-5-6-2018-18-24-37-W.pdf?sequence=1&isAllowed=y\n",
-      "A Brief Summary of Global WASH Interventions\n"
+      "A Brief Summary of Global WASH Interventions\n",
+      "384\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/29595/124813-BRI-PUBLIC-ADD-SERIES-EPPakistanUpdateFinal.pdf?sequence=1&isAllowed=y\n",
+      "Pakistan : Can Private Schools Catering to the Poor Increase Access and Improve Learning?\n",
+      "385\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30382/129237-BRI-PUBLIC-EMCompass-Note-56-Poverty-Measurement-July-12.pdf?sequence=1&isAllowed=y\n",
+      "A Practical Tool to Create Economic Opportunity for Low-Income Communities\n"
      ]
     }
    ],
