--- a/extract_info_from_pdfs.ipynb
+++ b/extract_info_from_pdfs.ipynb
@@ -176,7 +176,10 @@
       "Pakistan : Can Private Schools Catering to the Poor Increase Access and Improve Learning?\n",
       "385\n",
       "https://openknowledge.worldbank.org/bitstream/handle/10986/30382/129237-BRI-PUBLIC-EMCompass-Note-56-Poverty-Measurement-July-12.pdf?sequence=1&isAllowed=y\n",
-      "A Practical Tool to Create Economic Opportunity for Low-Income Communities\n"
+      "A Practical Tool to Create Economic Opportunity for Low-Income Communities\n",
+      "386\n",
+      "https://openknowledge.worldbank.org/bitstream/handle/10986/30274/129139-WP-PUBLIC-Focus-Note-Building-Inclusive-Payment-Ecosystems-June-2018.pdf?sequence=1&isAllowed=y\n",
+      "Building Inclusive Payment Ecosystems in Tanzania and Ghana\n"
      ]
     }
    ],
